--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 
 html {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 body {
@@ -40,12 +40,80 @@ body {
     margin: -0.1em 0 0.5em;
 }
 
-.all-tasks {
-    grid-area: lists;
+
+
+
+
+form {
+    display: flex;
 }
 
-.todo-list {
-    grid-area: active;
+.btn {
+    cursor: pointer;
+    padding: 0;
+    border: 0;
+    background: 0;
+    color: inherit;
+}
+
+.btn.create {
+    font-size: 1.5em;
+    font-weight: 900;
+    margin-right: 0.25em;
+    transition: opacity 250ms ease-in;
+}
+
+.btn.create:hover {
+    opacity: 0.7;
+}
+
+.btn.delete {
+    font-weight: 700;
+    letter-spacing: 1px;
+    opacity: 0.7;
+    font-size: 1rem;
+    transition: color 200ms;
+}
+
+.btn.delete:hover {
+    color: var(--clr-warning);
+}
+
+.new {
+    background: transparent;
+    border: 0;
+    color: inherit;
+    border-bottom: 1px solid currentColor;
+    font-size: inherit;
+    padding: 0.25em;
+    outline: none;
+    transition: border-bottom 150ms ease-in;
+    order: 2;
+}
+
+.new::placeholder {
+    opacity: 0.4;
+}
+
+.new:focus {
+    border-bottom-width: 3px;
+}
+
+
+.new:focus::placeholder {
+    opacity: 0.2;
+}
+
+.new.list {
+    font-size: 1.2rem;
+}
+
+.new.task {
+    margin-bottom: 0;
+}
+
+.all-tasks {
+    grid-area: lists;
 }
 
 .task-list {
@@ -55,7 +123,128 @@ body {
     padding-left: 1.1em;
 }
 
+.list-name {
+    cursor: pointer;
+}
+
+.list-name:hover {
+    opacity: 0.7;
+}
+
 .active-list {
-    font-weight: 700;
+    font-weight: 800;
     letter-spacing: 1px;
+}
+
+.todo-list {
+    --spacer: 2rem;
+    
+    grid-area: active;
+    background: var(--clr-ligh);
+    color: var(--clr-dark);
+}
+
+.todo-header {
+    background: #e4e4e4;
+    padding: var(--spacer);
+    display: flex;
+    text-align: center;
+    justify-content: space-between;   
+}
+
+.list-title {
+    margin: 0 1em 0 0;
+}
+
+.task-count {
+    margin: 0;
+    font-size: 1rem;
+}
+
+.todo-body {
+    padding: var(--spacer);
+    position: relative;
+}
+
+.new-task-creator .create {
+    color: var(--clr-prim);
+}
+
+[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+}
+
+.task label {
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+}
+
+.task {
+    position: relative;
+    margin-bottom: 1.35em;
+}
+
+.task::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: -0.5em;
+    height: 2px;
+    background: currentColor;
+    opacity: 0.1;
+}
+
+.custom-checkbox {
+    --size: 0.75em;
+    display: inline-block;
+    width: var(--size);
+    height: var(--size);
+    margin-right: var(--spacer);
+    cursor: pointer;
+    border: 2px solid currentColor;
+    border-radius: 50%;
+    transform: scale(1);
+    transition: transform 250ms ease-in-out;
+}
+
+.task:hover .custom-checkbox,
+[type="checkbox"]:focus + label .custom-checkbox {
+    transform: scale(1.2);
+    color: var(--clr-prim);
+}
+
+[type="checkbox"]:checked + label .custom-checkbox {
+    background: var(--clr-prim);
+    border-color: var(--clr-prim);
+    box-shadow: inset 0 0 0px 2px whitesmoke;
+}
+
+.task label::after {
+    content: "";
+    position: absolute;
+    left: 2.1em;
+    right: 0;
+    height: 3px;
+    background: currentColor;
+    transform: scaleX(0);
+    transition: transform 150ms ease-in-out;
+    transform-origin: right;
+}
+
+[type="checkbox"]:checked + label::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+.delete-stuff {
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: -25px;
+    color: var(--clr-ligh);
 }
